Archive2/86/1a4c3ded21ce4e/output
main.cpp:22:23: error: nested name specifier 'params<U, long>::' for declaration does not refer into a class, class template or class template partial specialization
bool params<U, long>::check(int value) const
     ~~~~~~~~~~~~~~~~~^
main.cpp:24:13: error: use of undeclared identifier 'm_value'
    return (m_value * value) % 2;
            ^
main.cpp:24:23: error: use of undeclared identifier 'value'
    return (m_value * value) % 2;
                      ^
3 errors generated.
